--- a/www.congress.gov.ph/b5df13bfe76ce04b1dfe464cfe25d3ac9763c6bd.html
+++ b/www.congress.gov.ph/b5df13bfe76ce04b1dfe464cfe25d3ac9763c6bd.html
@@ -174,12 +174,12 @@
         <div class="col-md-8">
             <ol class='breadcrumb'><li class='breadcrumb-item'><a href="http://www.congress.gov.ph/">Home</a></li><li class='breadcrumb-item'><a href="http://www.congress.gov.ph/members">House Members</a></li></ol>                <!-- <img src="../images/email_hor.gif" width="16" height="16" border="0" alt="Send email" style="float:left;" />&nbsp;<a href="#" onClick="pop_Window('../contact/popform.php?re=sendemail&to=member&id=I077')" title="contact form opens in a new window" class="sm_link_bill">Send email</a>&nbsp;  -->
     <h4>HOUSE MEMBERS</h4><hr />
-<img src='images/17th/belmonte-r.jpg' alt='Hon. Belmonte,  Ricardo Jr. T.' title='Hon. Belmonte,  Ricardo Jr. T.' class='img-thumbnail img-responsive pull-left img-margin' /><p class="text-warning pull-right">
+<img src='images/17th/belmonte-r.jpg' alt='Hon. Belmonte,  Ricardo &quot;RJ&quot; T.' title='Hon. Belmonte,  Ricardo &quot;RJ&quot; T.' class='img-thumbnail img-responsive pull-left img-margin' /><p class="text-warning pull-right">
 </p>
 <h4 style='margin-top: 0;'>
-    <span class='text-primary'>Hon. Belmonte,  Ricardo Jr. T.</span> 
+    <span class='text-primary'>Hon. Belmonte,  Ricardo &quot;RJ&quot; T.</span> 
     <!-- Email button (Under Construction) -->
-    <!-- <span class="glyphicon glyphicon-envelope" data-toggle="modal" data-target="#myEmail" title="Send Email to the Office of Hon. Belmonte,  Ricardo Jr. T."></span> -->
+    <!-- <span class="glyphicon glyphicon-envelope" data-toggle="modal" data-target="#myEmail" title="Send Email to the Office of Hon. Belmonte,  Ricardo &quot;RJ&quot; T."></span> -->
 
     <br /><small>Party List -  SBP</small></h4>
 
