--- a/www.congress.gov.ph/af0c1fb12399692881b2f10f1d53b8ea490b944c.html
+++ b/www.congress.gov.ph/af0c1fb12399692881b2f10f1d53b8ea490b944c.html
@@ -180,12 +180,12 @@
         <div class="col-md-8">
             <ol class='breadcrumb'><li class='breadcrumb-item'><a href="http://www.congress.gov.ph/">Home</a></li><li class='breadcrumb-item'><a href="http://www.congress.gov.ph/members">House Members</a></li></ol>                <!-- <img src="../images/email_hor.gif" width="16" height="16" border="0" alt="Send email" style="float:left;" />&nbsp;<a href="#" onClick="pop_Window('../contact/popform.php?re=sendemail&to=member&id=I023')" title="contact form opens in a new window" class="sm_link_bill">Send email</a>&nbsp;  -->
     <h4>HOUSE MEMBERS</h4><hr />
-<img src='images/17th/enverga-a.jpg' alt='Hon. Enverga, Anna Katrina &quot;Trina&quot; M.' title='Hon. Enverga, Anna Katrina &quot;Trina&quot; M.' class='img-thumbnail img-responsive pull-left img-margin' /><p class="text-warning pull-right">
+<img src='images/17th/enverga-a.jpg' alt='Hon. Enverga, Anna Katrina M.' title='Hon. Enverga, Anna Katrina M.' class='img-thumbnail img-responsive pull-left img-margin' /><p class="text-warning pull-right">
 </p>
 <h4 style='margin-top: 0;'>
-    <span class='text-primary'>Hon. Enverga, Anna Katrina &quot;Trina&quot; M.</span> 
+    <span class='text-primary'>Hon. Enverga, Anna Katrina M.</span> 
     <!-- Email button (Under Construction) -->
-    <!-- <span class="glyphicon glyphicon-envelope" data-toggle="modal" data-target="#myEmail" title="Send Email to the Office of Hon. Enverga, Anna Katrina &quot;Trina&quot; M."></span> -->
+    <!-- <span class="glyphicon glyphicon-envelope" data-toggle="modal" data-target="#myEmail" title="Send Email to the Office of Hon. Enverga, Anna Katrina M."></span> -->
 
     <br /><small>District Representative<br />Quezon, 1st District</small></h4>
 
