--- a/www.congress.gov.ph/3a8a6106b7d892a7465e3f20aadda21caa27d1a4.html
+++ b/www.congress.gov.ph/3a8a6106b7d892a7465e3f20aadda21caa27d1a4.html
@@ -189,7 +189,7 @@
 
     <br /><small>Party List -  DIWA</small></h4>
 
-<p>House of Representatives, Quezon City<br />Rm. N-410 <br>Phone: (632) 931-5001, Local: 7369<br />Direct: 9315510<br></p><div class="clearfix">&nbsp;</div><br />
+<p>House of Representatives, Quezon City<br />Rm. SW-107 <br>Phone: (632) 931-5001, Local: 7206<br />Direct: 9316311<br></p><div class="clearfix">&nbsp;</div><br />
 
 <!-- Tab Pills for Committee Membership, Bills Referred  -->
 
