--- a/www.congress.gov.ph/10b68c109d410438c7718a273fdc82594b076a1a.html
+++ b/www.congress.gov.ph/10b68c109d410438c7718a273fdc82594b076a1a.html
@@ -189,7 +189,7 @@
 
     <br /><small>District Representative<br />Davao del Norte, 1st District</small></h4>
 
-<p>House of Representatives, Quezon City<br />Rm. S-217-218 <br>Phone: (632) 931-5001, Local: 7543/7684<br />Direct: 9316277<br>External Site: <a href='https://www.facebook.com/speakeralvarez' title='External Site of House Member opens in a new window' target='_blank'>https://www.facebook.com/speakeralvarez</a><br /></p><div class="clearfix">&nbsp;</div><br />
+<p>House of Representatives, Quezon City<br />Rm. S-217-218 <br>Phone: (632) 931-5001, Local: 7684<br />Direct: 9316277<br>External Site: <a href='https://www.facebook.com/speakeralvarez' title='External Site of House Member opens in a new window' target='_blank'>https://www.facebook.com/speakeralvarez</a><br /></p><div class="clearfix">&nbsp;</div><br />
 
 <!-- Tab Pills for Committee Membership, Bills Referred  -->
 
